--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.gsysk.activity.LoginActivity"
-            android:label="@string/app_name" 
-              android:screenOrientation="portrait">
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="stateVisible|adjustResize" >>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,28 +41,29 @@
           <activity
             android:name="com.gsysk.activity.AdminButtonActivity"
             android:label="@string/app_name"
-              android:screenOrientation="portrait" >
+              android:configChanges="orientation|screenSize"
+              >
            
         </activity>
         
            <activity
             android:name="com.gsysk.activity.VehicleTrackerMapActivity"
-             android:screenOrientation="portrait">
+               android:configChanges="orientation|screenSize">
             </activity>
 
         <activity
             android:name="com.gsysk.activity.RoutesMapActivity"
-            android:screenOrientation="portrait">
+            android:configChanges="orientation|screenSize">
         </activity>
 
         <activity
             android:name="com.gsysk.activity.MapActivityUser"
-            android:screenOrientation="portrait">
+            android:configChanges="orientation|screenSize">
         </activity>
 
         <activity
             android:name="com.gsysk.activity.MapsDriverActivity"
-            android:screenOrientation="portrait">
+            android:configChanges="orientation|screenSize">
         </activity>
 
          <meta-data
