--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
      <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
      <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
      <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL"/>
+    
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
      <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -71,11 +72,22 @@
             android:value="@integer/google_play_services_version" />
               <meta-data
     android:name="com.google.android.maps.v2.API_KEY"
-    android:value="AIzaSyBwfVrOEaMvOQfwRwj8uDvN0LLN0p98jds"  />   
+    android:value="AIzaSyBwfVrOEaMvOQfwRwj8uDvN0LLN0p98jds"  />
+
+        <service
+            android:name="com.gsysk.phoneUtils.GPSTracker"
+            android:exported="false"/>
+
+        <service
+            android:name="com.gsysk.phoneUtils.DriverLocation"
+            android:exported="false"/>
     </application>
 
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true"/>
-    
+
+
+
+
 </manifest>
