--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:name="com.gsysk.activity.MainApplication"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/CustomActionBarTheme" >
         <activity
             android:name="com.gsysk.activity.LoginActivity"
             android:label="@string/app_name"
